# cryptopals-rs

./: Cargo.toml
src/: lib.rs  text.rs  utils.rs
src/crypto/: aes.rs  misc.rs  mod.rs
src/sets/: mod.rs  set1.rs  set2.rs
