[package]
name = "cryptopals-rs"
version = "0.1.0"
authors = ["Pietro Lorefice <pietro.lorefice@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.2"
rand = "0.7.3"
base64 = "0.12.0"
itertools = "0.9.0"
openssl = "0.10.28"